<resources>
    <string name="app_name">YTÜ Mezun Sistemi</string>
    <string name="full_name_text">İsim, Soyisim</string>
    <string name="email_address_text">Email Adresi</string>
    <string name="password_text">Parola</string>
    <string name="password_confirm_text">Parolayı Onayla</string>
    <string name="birth_date">Giriş Yılı</string>
    <string name="graduation_date">Mezuniyet Yılı</string>
    <string name="login_button">Giriş Yap</string>
    <string name="signup_prompt">Bir hesabınız yok mu?</string>
    <string name="signup_button">Kayıt Olun</string>
    <string name="have_an_account_prompt">Zaten bir hesabınız var mı?</string>
    <string name="or_prompt">veya</string>
    <string name="forgot_password_button">Şifrenizi Sıfırlayın</string>
    <string name="remember_me_checkbox">Beni Hatırla</string>
    <string name="profile_picture_description">Profil Fotoğrafı</string>
    <string name="take_picture_button">Fotoğraf Çek</string>
    <string name="upload_picture_button">Fotoğraf Yükle</string>
    <string name="no_app_supporting">Bu işlemi destekleyen uygulama bulunamadı.</string>
    <string name="camera_permission_required">Bu işlem için kamera izni gereklidir.</string>
    <string name="gallery_permission_required">Galeri izni gereklidir.</string>
    <string name="send_confirmation_email_button">Doğrula</string>
    <string name="go_back_button">Geri Dön</string>
    <string name="update_picture_button">Fotoğrafı Güncelle</string>
    <string name="update_info_button">Bilgileri Güncelle</string>
    <string name="update_email_address_button">Adresi Güncelle</string>
    <string name="update_password_button">Parolayı Güncelle</string>
    <string name="profile_picture_section_title">Profil Fotoğrafınız</string>
    <string name="primary_info_section_title">Bilgileriniz</string>
    <string name="email_address_section_title">Email Adresiniz</string>
    <string name="password_section_title">Parolanız</string>
    <string name="new_password_text">Yeni Parola</string>
    <string name="current_company_text">Çalıştığınız Ülke, Şehir, Firma</string>
    <string name="phone_number_text">Telefon Numarası</string>
    <string name="announcement_image">Duyuru görseli</string>
    <string name="user_image">Profil fotoğrafı</string>
    <string name="valid_until_prompt">Geçerlilik tarihi:</string>
    <string name="logout_button">Çıkış Yap</string>
    <string name="menu_button">Menü</string>
    <string name="goto_profile_prompt">Profilinizi görüntüleyin</string>
    <string name="add_post_button">Duyuru oluşturun</string>
    <string name="enter_due_date">Geçerlilik tarihi giriniz</string>
    <string name="post_text">Duyuru İçeriği</string>
    <string name="create_button">Oluştur</string>
    <string name="send_email">Email Gönder</string>
    <string name="send_message">Mesaj Gönder</string>

    <string name="title_login_page">Sisteme Giriş Yap</string>
    <string name="title_signup_page">Hesap Oluştur</string>
    <string name="title_profile_page">Profiliniz</string>
    <string name="title_main_page">Ana Sayfa</string>
    <string name="title_my_posts_page">Duyurularım</string>
    <string name="title_students_page">Mezunları Görüntüle</string>

    <string-array name="degree_types">
        <item>Lisans</item>
        <item>Yüksek Lisans</item>
        <item>Doktora</item>
    </string-array>
</resources>