<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/graduateAppText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/loginText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profile_page"
            android:textColor="@color/color_primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/graduateAppText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/ProfileView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profilePictureLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/textViewPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/profile_picture_section_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/cameraLayout"
                    android:layout_width="320dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewAvatar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/custom_button_inactive"
                        android:contentDescription="@string/profile_picture_description"
                        android:padding="8dp"
                        android:src="@drawable/ic_person"
                        tools:srcCompat="@tools:sample/avatars" />

                    <Button
                        android:id="@+id/buttonProfileTakePicture"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@drawable/custom_button_inactive"
                        android:gravity="center"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/take_picture_button"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/buttonProfileUploadPicture"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:background="@drawable/custom_button_inactive"
                        android:gravity="center"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@string/upload_picture_button"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonUpdatePicture"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:gravity="center"
                    android:text="@string/update_picture_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/profileInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/textViewPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/primary_info_section_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/textProfileFullName"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="username"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/full_name_text"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp" />

                <EditText
                    android:id="@+id/textProfileRegistrationYear"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="date"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_calendar"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/birth_date"
                    android:inputType="date"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp" />

                <EditText
                    android:id="@+id/textProfileGraduationYear"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="date"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_graduation"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/graduation_date"
                    android:inputType="date"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp" />

                <EditText
                    android:id="@+id/textProfilePhoneNumber"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="date"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/phone_number_text"
                    android:inputType="phone"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp" />

                <EditText
                    android:id="@+id/textProfileCurrentCompany"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="date"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_business"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/current_company_text"
                    android:inputType="date"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp" />

                <Spinner
                    android:id="@+id/spinnerDegree"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/custom_input"
                    android:spinnerMode="dropdown" />

                <Button
                    android:id="@+id/buttonUpdateProfile"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/custom_button"
                    android:gravity="center"
                    android:text="@string/update_info_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/emailAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/textViewEmailAddressSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/email_address_section_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/textProfileEmailAddress"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="24dp"
                    android:autofillHints="username"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/email_address_text"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp" />

                <Button
                    android:id="@+id/buttonUpdateEmailAddress"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:gravity="center"
                    android:text="@string/update_email_address_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/profilePasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/textViewProfileUpdatePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/password_section_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/textProfileCurrentPassword"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="12dp"
                    android:autofillHints="password"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/password_text"
                    android:inputType="textPassword"
                    android:labelFor="@+id/textViewPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp" />

                <EditText
                    android:id="@+id/textProfileNewPassword"
                    android:layout_width="320dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="24dp"
                    android:autofillHints="password"
                    android:background="@drawable/custom_input"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/new_password_text"
                    android:inputType="textPassword"
                    android:labelFor="@+id/textViewPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="12dp" />

                <Button
                    android:id="@+id/buttonUpdatePassword"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:gravity="center"
                    android:text="@string/update_password_button"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>