<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgotPassword">

    <EditText
        android:id="@+id/textProfileEmailAddress"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="username"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/email_address_text"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="12dp" />

    <Button
        android:id="@+id/buttonSendConfirmationEmail"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:text="@string/send_confirmation_email_button"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonGoBack"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button_inactive"
        android:text="@string/go_back_button"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>